# haskell-vim-now

./: .gitignore  .travis.yml  .vimrc  Dockerfile  HaskellVimNow.hs  LICENSE  Notes.md  README.md  dependencies.cabal  git-hscope  install.sh  vimrc.haskell
scripts/: func.sh  neovim.sh  setup.sh  setup_haskell.hs
